force-app/main/default/objects/coverage_details__dlm/fields/coverage_type__c.field-meta.xml
<CustomField>
    <fullName>coverage_type__c</fullName>
    <label>coverage_type</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>coverage_type</labelOverride>
        <masterLabel>coverage_type</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>