force-app/main/default/objects/coverage_details__dlm/fields/deductible__c.field-meta.xml
<CustomField>
    <fullName>deductible__c</fullName>
    <label>deductible</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>deductible</labelOverride>
        <masterLabel>deductible</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>