force-app/main/default/objects/coverage_details__dlm/fields/rel_1768195398956_end__c.field-meta.xml
<CustomField>
    <fullName>rel_1768195398956_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>coverage_details_SourceRecordId_map__rel</label>
    <referenceTo>TestADL_TestLibDataLake__dlm</referenceTo>
    <relationshipLabel>coverage_details_SourceRecordId_map__rel</relationshipLabel>
    <relationshipName>rel_1768195398956_end</relationshipName>
    <type>Lookup</type>
</CustomField>